[tool.coverage.run]
source = ["transformers"]
omit = [
    "*/convert_*",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise",
    "except",
    "register_parameter"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--doctest-glob='**/*.md'"
doctest_optionflags="NUMBER NORMALIZE_WHITESPACE ELLIPSIS"
markers = [
    "flash_attn_test: marks tests related to flash attention (deselect with '-m \"not flash_attn_test\"')",
    "bitsandbytes: select (or deselect with `not`) bitsandbytes integration tests",
    "generate: marks tests that use the GenerationTesterMixin"
]

[tool.poetry]
name = "transformers"
version = "0.1.0"
description = ""
authors = ["LeonardoAPP <leontolstoy91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.0"
torchvision = "0.14.0"
torchaudio = "0.13.0"
numpy = "^2.2.1"
scipy = "^1.14.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
rich = "^13.9.4"
pytorch-lightning = "1.8.6"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
wandb = "^0.19.1"
einops = "^0.8.0"
opt-einsum = "^3.4.0"
timm = "^1.0.12"
prettytable = "^3.12.0"
numerize = "^0.12"
git-lfs = "^1.6"
torchtext = "0.14.0"
datasets = "^3.2.0"
pyfaidx = "^0.8.1.3"
polars = "^1.18.0"
genomic-benchmarks = "^0.0.9"
loguru = "^0.7.3"
liftover = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
